src/test/ui/issues/issue-10764.stderr
error[E0308]: mismatched types
  --> $DIR/issue-10764.rs:4:15
   |
LL | fn main() { f(bar) }
   |               ^^^ expected "Rust" fn, found "C" fn
   |
   = note: expected fn pointer `fn()`
                 found fn item `extern "C" fn() {bar}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
